--- a/src/css/scss/common/reset.css
+++ b/src/css/scss/common/reset.css
@@ -1,4 +1,4 @@
-*{margin:0;padding:0}ul,li{list-style:none}.clearfix{zoom:1}.clearfix::after{content:'';display:block;height:0;overflow:hidden;clear:both}
+*{margin:0;padding:0}ul,li{list-style:none}.clearfix{zoom:1}.clearfix::after{content:'';display:block;height:0;overflow:hidden;clear:both}.fl{float:left}.fr{float:right}
 
 
 /*# sourceMappingURL=../maps/common/reset.css.map */
